<resources>
    <string name="app_name">GoogleImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_search_text">Search</string>
    <string name="et_hint_enter_query">Enter your query...</string>
    <string name="item_image_result_title">Image title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_advanced_search">AdvancedSearch</string>
    <string name="advanced_search_title">Advanced Search Options</string>
    <string name="tv_image_size">Image Size</string>
    <string name="tv_color_filter">Color Filter</string>
    <string name="tv_image_type">Image Type</string>
    <string name="tv_site_filter">Site Filter</string>
    <string name="bt_save">Save</string>

    <string-array name="image_size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>x-large</item>
    </string-array>

    <string-array name="color_filter">
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>red</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_type">
        <item>face</item>
        <item>photo</item>
        <item>clip-art</item>
        <item>line-art</item>
    </string-array>
</resources>
