<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.meteoru.googleimagesearch.activities.AdvancedSearch">

    <TextView android:id="@+id/tvTitle"
        android:text="@string/advanced_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp" android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_image_size"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_color_filter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_image_type"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_site_filter"
        android:textStyle="bold"
        android:layout_alignTop="@+id/etSiteFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/etSiteFilter" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_alignRight="@+id/spImageSize"
        android:layout_alignEnd="@+id/spImageSize"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spmageType"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_alignRight="@+id/spImageSize"
        android:layout_alignEnd="@+id/spImageSize"
        android:layout_alignLeft="@+id/spColorFilter"
        android:layout_alignStart="@+id/spColorFilter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/spmageType"
        android:layout_alignEnd="@+id/spmageType"
        android:layout_alignLeft="@+id/spmageType"
        android:layout_alignStart="@+id/spmageType" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_save"
        android:textSize="26sp"
        android:id="@+id/btSaveSearchOptions"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
